@@ -89,9 +89,10 @@ following names for their contribution to the product.
 * Karun Dambietz
 * Kim Hyun-Joon
 * Lee Worden
+* Lejonel
 * liangent
-* Lucas Garczewski
 * Louperivois
+* Lucas Garczewski
 * Luigi Corsaro
 * Manuel Menal
 * Marcin Cieślak
